// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`preview snapshot > dark theme 1`] = `
"<!DOCTYPE html>
<html>
<head>
<meta charset="utf-8">
<title>doc.md</title>
<link rel="stylesheet" href="">
<style>
  html { color-scheme: dark;   }
  html, body { margin: 0; padding: 0; background: #1c1c1f; }
  body {
    color: #e9eaee;
    font-family: sans-serif;
    font-size: 16px;
    line-height: 1.75;
    /* 中英文混排：trim 中文标点旁的西文空白，等宽数字 */
    text-spacing-trim: space-first;
    font-variant-numeric: tabular-nums;
    font-feature-settings: "kern" 1, "liga" 1, "calt" 1;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
  }
  ::-webkit-scrollbar { width: 10px; height: 10px; }
  ::-webkit-scrollbar-track, ::-webkit-scrollbar-corner { background: transparent; }
  ::-webkit-scrollbar-thumb {
    background: #d2d4d9;
    border: 2px solid transparent;
    border-radius: 999px;
    background-clip: content-box;
  }
  /* 全宽（TizuMark 复刻）：正文区不再限宽，--measure 仅保留给源码模式 */
  article { max-width: 100%; margin: 0 auto; padding: 24px 24px 40px; }
  /* 导出限宽变体：正文 960px 居中 */
  article.code-narrow { max-width: min(960px, 94%); margin: 0 auto; }

  /* 标题：校样样张层级——h1 丝线、h2 无线、h5/h6 缩小转灰；间距走 typography 单一来源 */
  h1, h2, h3, h4, h5, h6 { line-height: 1.3; }
  h1 {
    font-size: 2.4em;
    font-weight: 700;
    line-height: 1.2;
    color: #e9eaee;
    margin: 48px 0 16px;
    padding-bottom: 16px;
    border-bottom: 1px solid #e4e5e8;
  }
  h2 {
    font-size: 1.6em;
    font-weight: 650;
    color: #e9eaee;
    margin: 48px 0 16px;
  }
  h3 {
    font-size: 1.25em;
    font-weight: 650;
    color: #e9eaee;
    margin: 24px 0 12px;
  }
  h4 {
    font-size: 1em;
    font-weight: 700;
    color: #e9eaee;
    margin: 24px 0 12px;
  }
  h5 {
    font-size: 0.875em;
    font-weight: 600;
    color: #5c6068;
    margin: 24px 0 12px;
  }
  h6 {
    font-size: 0.8125em;
    font-weight: 600;
    letter-spacing: 0.04em;
    color: #5c6068;
    margin: 24px 0 12px;
  }

  /* 段落：单侧 margin，14px 段距（TizuMark 节奏） */
  p { margin: 0 0 16px; }

  /* 行内强调 */
  strong, b { font-weight: 700; }
  em { font-style: italic; }
  del { text-decoration: line-through; color: #5c6068; }
  /* ==高亮== 荧光标记（校对样张高亮黄） */
  mark {
    display: inline-block;
    background: #96590a;
    color: #14151d;
    padding: 1px 4px;
    border-radius: 3px;
    -webkit-box-decoration-break: clone;
    box-decoration-break: clone;
  }
  kbd {
    display: inline-block;
    padding: 2px 7px;
    font-size: 0.82em;
    font-family: monospace;
    color: #e9eaee;
    background: color-mix(in srgb, #e9eaee 6%, #1c1c1f);
    border: 1px solid #e4e5e8;
    border-bottom-width: 2px;
    border-radius: 4px;
    box-shadow: inset 0 -1px 0 #e4e5e8;
    line-height: 1.5;
    vertical-align: baseline;
  }
  abbr { text-decoration: underline dotted; cursor: help; }
  /* 链接：校对样张——墨字 + 校对红下划线 */
  a {
    color: #e9eaee;
    text-decoration: underline;
    text-decoration-color: #4a52a3;
    text-underline-offset: 3px;
  }
  a:hover { color: #4a52a3; }

  /* 行内 code：底色 + 1px 边框（TizuMark）；padding 2px 5px 保证盒高 ≤ 行高 */
  code {
    font-family: monospace;
    font-size: 0.88em;
    padding: 2px 5px;
    background: color-mix(in srgb, #e9eaee 6%, #1c1c1f);
    border: 1px solid #e4e5e8;
    border-radius: 4px;
  }

  /* 列表：24px 缩进 / 4px 项距 / 嵌套 4px；多级 marker（TizuMark 复刻） */
  ul, ol { padding-left: 24px; margin: 0 0 16px; }
  li { margin: 0 0 4px; }
  li > p { margin: 0 0 4px; }
  ul ul, ol ol, ul ol, ol ul { margin-top: 4px; margin-bottom: 4px; }
  /* 嵌套列表引导线（校对样张）：发丝线沿层级收进 */
  li > ul, li > ol {
    padding-left: 16px;
    border-left: 1px solid #e4e5e8;
  }
  :where(article) ul { list-style-type: disc; }
  :where(article) ul ul { list-style-type: circle; }
  :where(article) ul ul ul { list-style-type: square; }
  :where(article) ul ul ul ul { list-style-type: disc; }
  @counter-style paren-decimal { system: extends decimal; suffix: ") "; }
  @counter-style circled-decimal {
    system: numeric;
    symbols: "\\24EA" "\\2460" "\\2461" "\\2462" "\\2463" "\\2464" "\\2465" "\\2466" "\\2467" "\\2468";
    suffix: " ";
  }
  :where(article) ol { list-style-type: decimal; }
  :where(article) ol ol { list-style-type: paren-decimal; }
  :where(article) ol ol ol { list-style-type: circled-decimal; }
  :where(article) ol ol ol ol { list-style-type: circled-decimal; }

  /* 任务列表：16px 绿色勾选框（TizuMark） */
  ul:has(input[type="checkbox"]) { list-style: none; padding-left: 0; }
  ul:has(input[type="checkbox"]) > li:not(.task-list-item) { list-style: disc; padding-left: 24px; }
  li.task-list-item { list-style: none; }
  li input[type="checkbox"] {
    appearance: none;
    -webkit-appearance: none;
    margin: 0 8px 0 0;
    width: 16px;
    height: 16px;
    border: 1.5px solid #d2d4d9;
    border-radius: 3px;
    background: #ffffff;
    vertical-align: middle;
    position: relative;
    top: -1px;
    cursor: pointer;
    transition: background 120ms ease-out, border-color 120ms ease-out;
  }
  li input[type="checkbox"]:hover { border-color: #177a3d; }
  li input[type="checkbox"]:not(:checked) { opacity: 0.7; }
  li input[type="checkbox"]:checked {
    background: #177a3d;
    border-color: #177a3d;
    opacity: 1;
  }
  li input[type="checkbox"]:checked::after {
    content: "";
    position: absolute;
    left: 4px;
    top: 1px;
    width: 5px;
    height: 9px;
    border: solid #fff;
    border-width: 0 2px 2px 0;
    transform: rotate(45deg);
  }

  /* 代码块：打纸稿——与行内代码同底、1px 边框、8px 圆角、右上语言标签；300px 按需滚动 */
  pre {
    position: relative;
    padding: 24px 32px;
    background: color-mix(in srgb, #e9eaee 6%, #1c1c1f);
    border: 1px solid #e4e5e8;
    border-radius: 8px;
    margin: 24px 0;
  }
  pre[data-lang]::after {
    content: attr(data-lang);
    position: absolute;
    top: 12px;
    right: 16px;
    font: 10px monospace;
    letter-spacing: 0.14em;
    color: #5c6068;
  }
  pre code {
    background: transparent;
    border: none;
    border-radius: 0;
    padding: 0;
    font-size: 0.9em;
    font-weight: 400;
    display: block;
  }
  .code-scroll { display: block; max-height: 300px; overflow: auto; }
  .code-line { display: flex; line-height: 1.6; min-width: 0; }
  .code-line-num {
    flex: none;
    width: 3em;
    text-align: right;
    padding-right: 0.8em;
    color: #5c6068;
    opacity: 0.75;
    user-select: none;
    display: none;
  }
  article.code-line-numbers .code-line-num { display: inline; }
  .code-line-text { white-space: pre; flex: 1 1 auto; min-width: 0; }

  /* 语法高亮：与编辑器同源的 --syn-* 变量（见 collectPreviewTokens） */
  .tok-keyword { color: var(--syn-keyword); }
  .tok-string, .tok-string2 { color: var(--syn-string); }
  .tok-number, .tok-atom, .tok-literal { color: var(--syn-number); }
  .tok-comment { color: var(--syn-comment); font-style: italic; }
  .tok-typeName, .tok-namespace, .tok-className, .tok-macroName { color: var(--syn-type); }
  .tok-propertyName { color: var(--syn-property); }
  .tok-meta { color: var(--syn-meta); }
  .tok-operator, .tok-punctuation, .tok-bracket, .tok-separator { color: var(--syn-punct); }
  .tok-link, .tok-url { color: var(--syn-link); }
  .tok-heading { color: var(--syn-heading); font-weight: 600; }

  /* 表格：校样样张「简约灰」——圆角外框、无竖线、灰表头、斑马纹、发丝行线、粘性表头 */
  .table-wrap {
    overflow-x: auto;
    margin: 24px 0;
    border: 1px solid #e4e5e8;
    border-radius: 10px;
  }
  table {
    border-collapse: separate;
    border-spacing: 0;
    width: 100%;
    font-variant-numeric: tabular-nums;
  }
  th, td {
    padding: 12px 16px;
    text-align: left;
    vertical-align: top;
    line-height: 1.65;
  }
  th {
    position: sticky;
    top: 0;
    z-index: 1;
    font-weight: 600;
    font-size: 12.5px;
    letter-spacing: 0.03em;
    color: #5c6068;
    background: color-mix(in srgb, #e9eaee 4%, #1c1c1f);
    border-bottom: 1px solid #d2d4d9;
  }
  th:first-child { border-top-left-radius: 9px; }
  th:last-child { border-top-right-radius: 9px; }
  td { border-bottom: 1px solid #e4e5e8; }
  tbody tr:last-child td { border-bottom: 0; }
  tbody tr:last-child td:first-child { border-bottom-left-radius: 9px; }
  tbody tr:last-child td:last-child { border-bottom-right-radius: 9px; }
  tbody tr:nth-child(even) { background: color-mix(in srgb, #e9eaee 3%, transparent); }
  tbody tr:hover { background: color-mix(in srgb, #4a52a3 6%, transparent); }

  /* 引用：校对样张——3px 校对红边条、无底色、灰字；嵌套收敛为发丝线 */
  blockquote {
    margin: 0 0 24px;
    padding: 12px 16px;
    border-left: 3px solid #4a52a3;
    color: #5c6068;
  }
  blockquote > :last-child { margin-bottom: 0; }
  blockquote > blockquote {
    margin: 8px 0;
    border-left: 1px solid #d2d4d9;
    color: inherit;
  }
  blockquote:has(strong:first-child) { border-left-color: #96590a; }

  /* hr：发丝线 + 中心校对红圆点（校对样张） */
  hr {
    border: none;
    position: relative;
    height: 1px;
    background: #e4e5e8;
    margin: 32px 0;
  }
  hr::after {
    content: "";
    position: absolute;
    left: 50%;
    top: 50%;
    width: 5px;
    height: 5px;
    margin: -2.5px 0 0 -2.5px;
    border-radius: 50%;
    background: #4a52a3;
  }

  img { max-width: 100%; height: auto; border: 1px solid #e4e5e8; border-radius: 8px; }
  .img-broken {
    display: inline-block;
    max-width: 100%;
    padding: 6px 10px;
    border: 1px dashed #d2d4d9;
    border-radius: 6px;
    color: #5c6068;
    font-size: 0.85em;
    word-break: break-all;
  }

  /* 定义列表 */
  dl { margin: 0 0 16px; }
  dt { font-weight: 600; margin-top: 8px; }
  dd { margin-left: 24px; margin-bottom: 8px; color: #5c6068; }

  /* [TOC] 目录卡片（TizuMark） */
  .toc {
    background: linear-gradient(135deg,
      color-mix(in srgb, #4a52a3 6%, #1c1c1f) 0%,
      color-mix(in srgb, #4a52a3 3%, #1c1c1f) 100%);
    border: 1px solid color-mix(in srgb, #4a52a3 22%, #1c1c1f);
    border-left: 3px solid #4a52a3;
    border-radius: 8px;
    padding: 16px 20px;
    margin: 16px 0;
  }
  .toc-title {
    font-size: 1em;
    font-weight: 600;
    margin-bottom: 12px;
    color: #4a52a3;
    display: flex;
    align-items: center;
    gap: 6px;
  }
  .toc-title svg { flex: none; }
  .toc-list { list-style: none !important; padding-left: 0 !important; margin: 0; }
  .toc-list li { margin-bottom: 3px; line-height: 1.6; }
  .toc-list li::before {
    content: "";
    display: inline-block;
    width: 5px;
    height: 5px;
    border-radius: 50%;
    background: #4a52a3;
    margin-right: 8px;
    vertical-align: middle;
    opacity: 0.6;
  }
  .toc-list li.lvl-2 { padding-left: 20px; }
  .toc-list li.lvl-3 { padding-left: 40px; }
  .toc-list li.lvl-4 { padding-left: 60px; }
  .toc-list a {
    color: #4a52a3;
    text-decoration: underline;
    text-underline-offset: 2px;
    font-size: 0.92em;
  }
  .toc-list a:hover { color: color-mix(in srgb, #4a52a3 82%, #e9eaee); }

  /* Callout（GitHub 风 > [!NOTE]，TizuMark 复刻；五色走 --alert-*-rgb） */
  .alert {
    border-radius: 10px;
    padding: 14px 18px;
    margin: 16px 0;
    border-left: 4px solid;
    overflow-wrap: break-word;
  }
  .alert-title {
    font-weight: 700;
    margin-bottom: 6px;
    font-size: 0.95em;
    display: flex;
    align-items: center;
    gap: 8px;
    letter-spacing: 0.3px;
  }
  .alert-icon { width: 18px; height: 18px; flex: none; }
  .alert-content { font-size: 0.92em; }
  .alert-content > :first-child { margin-top: 0; }
  .alert-content > :last-child { margin-bottom: 0; }
  .alert-note {
    background: linear-gradient(135deg, rgba(var(--alert-note-rgb, 74, 82, 163), 0.08) 0%, rgba(var(--alert-note-rgb, 74, 82, 163), 0.04) 100%);
    border-left-color: rgb(var(--alert-note-rgb, 74, 82, 163));
    box-shadow: inset 0 0 0 1px rgba(var(--alert-note-rgb, 74, 82, 163), 0.1);
  }
  .alert-note .alert-title { color: rgb(var(--alert-note-rgb, 74, 82, 163)); }
  .alert-tip {
    background: linear-gradient(135deg, rgba(var(--alert-tip-rgb, 23, 122, 61), 0.08) 0%, rgba(var(--alert-tip-rgb, 23, 122, 61), 0.04) 100%);
    border-left-color: rgb(var(--alert-tip-rgb, 23, 122, 61));
    box-shadow: inset 0 0 0 1px rgba(var(--alert-tip-rgb, 23, 122, 61), 0.1);
  }
  .alert-tip .alert-title { color: rgb(var(--alert-tip-rgb, 23, 122, 61)); }
  .alert-important {
    background: linear-gradient(135deg, rgba(var(--alert-important-rgb, 124, 58, 237), 0.08) 0%, rgba(var(--alert-important-rgb, 124, 58, 237), 0.04) 100%);
    border-left-color: rgb(var(--alert-important-rgb, 124, 58, 237));
    box-shadow: inset 0 0 0 1px rgba(var(--alert-important-rgb, 124, 58, 237), 0.1);
  }
  .alert-important .alert-title { color: rgb(var(--alert-important-rgb, 124, 58, 237)); }
  .alert-warning {
    background: linear-gradient(135deg, rgba(var(--alert-warning-rgb, 150, 89, 10), 0.08) 0%, rgba(var(--alert-warning-rgb, 150, 89, 10), 0.04) 100%);
    border-left-color: rgb(var(--alert-warning-rgb, 150, 89, 10));
    box-shadow: inset 0 0 0 1px rgba(var(--alert-warning-rgb, 150, 89, 10), 0.1);
  }
  .alert-warning .alert-title { color: rgb(var(--alert-warning-rgb, 150, 89, 10)); }
  .alert-caution {
    background: linear-gradient(135deg, rgba(var(--alert-caution-rgb, 192, 57, 44), 0.08) 0%, rgba(var(--alert-caution-rgb, 192, 57, 44), 0.04) 100%);
    border-left-color: rgb(var(--alert-caution-rgb, 192, 57, 44));
    box-shadow: inset 0 0 0 1px rgba(var(--alert-caution-rgb, 192, 57, 44), 0.1);
  }
  .alert-caution .alert-title { color: rgb(var(--alert-caution-rgb, 192, 57, 44)); }

  /* 数学公式（KaTeX 1.1em，TizuMark） */
  .math-block { margin: 16px 0; overflow-x: auto; overflow-y: hidden; }
  .math-block .katex-display { margin: 0; }
  .katex { font-size: 1.1em; }
  .katex-error { color: #5c6068; font-style: italic; }
  .math-error {
    color: #5c6068;
    background: color-mix(in srgb, #e9eaee 6%, #1c1c1f);
    border: 1px dashed #d2d4d9;
    border-radius: 4px;
    padding: 0 0.35em;
    font-family: monospace;
    font-size: 0.88em;
  }

  /* 脚注 */
  .footnote-ref { line-height: 0; }
  .footnote-ref a, .footnote-backref {
    color: #4a52a3;
    font-weight: 600;
    text-decoration: none;
  }
  .footnote-ref a:hover { text-decoration: underline; }
  .footnotes-sep { margin: 32px 0 16px; border: none; border-top: 1px solid #e4e5e8; }
  .footnotes { font-size: 0.92em; color: #5c6068; }
  .footnotes-list { padding-left: 1.6em; margin: 0; }
  .footnote-item { margin: 0.25em 0; }
  .footnote-item p { margin: 0 0 4px; }
  .footnote-backref { margin-left: 4px; font-size: 0.85em; opacity: 0.6; }
  .footnote-backref:hover { opacity: 1; }

  ins { text-decoration: underline; }
  sub, sup { font-size: 0.72em; line-height: 0; }
  /* 选中态：随系统颜色，但保证不破坏布局 */
  ::selection { background: color-mix(in srgb, #4a52a3 30%, transparent); }
</style>
</head>
<body>
<article><h1 data-line="0" id="title">Title</h1>
<p data-line="2">para <strong>bold</strong> <code>code</code></p>
<ul class="contains-task-list" data-line="4">
<li class="task-list-item enabled" data-line="4"><input class="task-list-item-checkbox" type="checkbox"> todo</li>
</ul>
<div class="table-wrap"><table data-line="6">
<thead data-line="6">
<tr data-line="6">
<th>a</th>
</tr>
</thead>
<tbody data-line="8">
<tr data-line="8">
<td>1</td>
</tr>
</tbody>
</table>
</div></article>
</body>
</html>"
`;

exports[`preview snapshot > light theme 1`] = `
"<!DOCTYPE html>
<html>
<head>
<meta charset="utf-8">
<title>doc.md</title>
<link rel="stylesheet" href="">
<style>
  html { color-scheme: light;   }
  html, body { margin: 0; padding: 0; background: #ffffff; }
  body {
    color: #1a1b1f;
    font-family: sans-serif;
    font-size: 16px;
    line-height: 1.75;
    /* 中英文混排：trim 中文标点旁的西文空白，等宽数字 */
    text-spacing-trim: space-first;
    font-variant-numeric: tabular-nums;
    font-feature-settings: "kern" 1, "liga" 1, "calt" 1;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
  }
  ::-webkit-scrollbar { width: 10px; height: 10px; }
  ::-webkit-scrollbar-track, ::-webkit-scrollbar-corner { background: transparent; }
  ::-webkit-scrollbar-thumb {
    background: #d2d4d9;
    border: 2px solid transparent;
    border-radius: 999px;
    background-clip: content-box;
  }
  /* 全宽（TizuMark 复刻）：正文区不再限宽，--measure 仅保留给源码模式 */
  article { max-width: 100%; margin: 0 auto; padding: 24px 24px 40px; }
  /* 导出限宽变体：正文 960px 居中 */
  article.code-narrow { max-width: min(960px, 94%); margin: 0 auto; }

  /* 标题：校样样张层级——h1 丝线、h2 无线、h5/h6 缩小转灰；间距走 typography 单一来源 */
  h1, h2, h3, h4, h5, h6 { line-height: 1.3; }
  h1 {
    font-size: 2.4em;
    font-weight: 700;
    line-height: 1.2;
    color: #1a1b1f;
    margin: 48px 0 16px;
    padding-bottom: 16px;
    border-bottom: 1px solid #e4e5e8;
  }
  h2 {
    font-size: 1.6em;
    font-weight: 650;
    color: #1a1b1f;
    margin: 48px 0 16px;
  }
  h3 {
    font-size: 1.25em;
    font-weight: 650;
    color: #1a1b1f;
    margin: 24px 0 12px;
  }
  h4 {
    font-size: 1em;
    font-weight: 700;
    color: #1a1b1f;
    margin: 24px 0 12px;
  }
  h5 {
    font-size: 0.875em;
    font-weight: 600;
    color: #5c6068;
    margin: 24px 0 12px;
  }
  h6 {
    font-size: 0.8125em;
    font-weight: 600;
    letter-spacing: 0.04em;
    color: #5c6068;
    margin: 24px 0 12px;
  }

  /* 段落：单侧 margin，14px 段距（TizuMark 节奏） */
  p { margin: 0 0 16px; }

  /* 行内强调 */
  strong, b { font-weight: 700; }
  em { font-style: italic; }
  del { text-decoration: line-through; color: #5c6068; }
  /* ==高亮== 荧光标记（校对样张高亮黄） */
  mark {
    display: inline-block;
    background: #96590a;
    color: #1a1b1f;
    padding: 1px 4px;
    border-radius: 3px;
    -webkit-box-decoration-break: clone;
    box-decoration-break: clone;
  }
  kbd {
    display: inline-block;
    padding: 2px 7px;
    font-size: 0.82em;
    font-family: monospace;
    color: #1a1b1f;
    background: color-mix(in srgb, #1a1b1f 6%, #ffffff);
    border: 1px solid #e4e5e8;
    border-bottom-width: 2px;
    border-radius: 4px;
    box-shadow: inset 0 -1px 0 #e4e5e8;
    line-height: 1.5;
    vertical-align: baseline;
  }
  abbr { text-decoration: underline dotted; cursor: help; }
  /* 链接：校对样张——墨字 + 校对红下划线 */
  a {
    color: #1a1b1f;
    text-decoration: underline;
    text-decoration-color: #4a52a3;
    text-underline-offset: 3px;
  }
  a:hover { color: #4a52a3; }

  /* 行内 code：底色 + 1px 边框（TizuMark）；padding 2px 5px 保证盒高 ≤ 行高 */
  code {
    font-family: monospace;
    font-size: 0.88em;
    padding: 2px 5px;
    background: color-mix(in srgb, #1a1b1f 6%, #ffffff);
    border: 1px solid #e4e5e8;
    border-radius: 4px;
  }

  /* 列表：24px 缩进 / 4px 项距 / 嵌套 4px；多级 marker（TizuMark 复刻） */
  ul, ol { padding-left: 24px; margin: 0 0 16px; }
  li { margin: 0 0 4px; }
  li > p { margin: 0 0 4px; }
  ul ul, ol ol, ul ol, ol ul { margin-top: 4px; margin-bottom: 4px; }
  /* 嵌套列表引导线（校对样张）：发丝线沿层级收进 */
  li > ul, li > ol {
    padding-left: 16px;
    border-left: 1px solid #e4e5e8;
  }
  :where(article) ul { list-style-type: disc; }
  :where(article) ul ul { list-style-type: circle; }
  :where(article) ul ul ul { list-style-type: square; }
  :where(article) ul ul ul ul { list-style-type: disc; }
  @counter-style paren-decimal { system: extends decimal; suffix: ") "; }
  @counter-style circled-decimal {
    system: numeric;
    symbols: "\\24EA" "\\2460" "\\2461" "\\2462" "\\2463" "\\2464" "\\2465" "\\2466" "\\2467" "\\2468";
    suffix: " ";
  }
  :where(article) ol { list-style-type: decimal; }
  :where(article) ol ol { list-style-type: paren-decimal; }
  :where(article) ol ol ol { list-style-type: circled-decimal; }
  :where(article) ol ol ol ol { list-style-type: circled-decimal; }

  /* 任务列表：16px 绿色勾选框（TizuMark） */
  ul:has(input[type="checkbox"]) { list-style: none; padding-left: 0; }
  ul:has(input[type="checkbox"]) > li:not(.task-list-item) { list-style: disc; padding-left: 24px; }
  li.task-list-item { list-style: none; }
  li input[type="checkbox"] {
    appearance: none;
    -webkit-appearance: none;
    margin: 0 8px 0 0;
    width: 16px;
    height: 16px;
    border: 1.5px solid #d2d4d9;
    border-radius: 3px;
    background: #ffffff;
    vertical-align: middle;
    position: relative;
    top: -1px;
    cursor: pointer;
    transition: background 120ms ease-out, border-color 120ms ease-out;
  }
  li input[type="checkbox"]:hover { border-color: #177a3d; }
  li input[type="checkbox"]:not(:checked) { opacity: 0.7; }
  li input[type="checkbox"]:checked {
    background: #177a3d;
    border-color: #177a3d;
    opacity: 1;
  }
  li input[type="checkbox"]:checked::after {
    content: "";
    position: absolute;
    left: 4px;
    top: 1px;
    width: 5px;
    height: 9px;
    border: solid #fff;
    border-width: 0 2px 2px 0;
    transform: rotate(45deg);
  }

  /* 代码块：打纸稿——与行内代码同底、1px 边框、8px 圆角、右上语言标签；300px 按需滚动 */
  pre {
    position: relative;
    padding: 24px 32px;
    background: color-mix(in srgb, #1a1b1f 6%, #ffffff);
    border: 1px solid #e4e5e8;
    border-radius: 8px;
    margin: 24px 0;
  }
  pre[data-lang]::after {
    content: attr(data-lang);
    position: absolute;
    top: 12px;
    right: 16px;
    font: 10px monospace;
    letter-spacing: 0.14em;
    color: #5c6068;
  }
  pre code {
    background: transparent;
    border: none;
    border-radius: 0;
    padding: 0;
    font-size: 0.9em;
    font-weight: 400;
    display: block;
  }
  .code-scroll { display: block; max-height: 300px; overflow: auto; }
  .code-line { display: flex; line-height: 1.6; min-width: 0; }
  .code-line-num {
    flex: none;
    width: 3em;
    text-align: right;
    padding-right: 0.8em;
    color: #5c6068;
    opacity: 0.75;
    user-select: none;
    display: none;
  }
  article.code-line-numbers .code-line-num { display: inline; }
  .code-line-text { white-space: pre; flex: 1 1 auto; min-width: 0; }

  /* 语法高亮：与编辑器同源的 --syn-* 变量（见 collectPreviewTokens） */
  .tok-keyword { color: var(--syn-keyword); }
  .tok-string, .tok-string2 { color: var(--syn-string); }
  .tok-number, .tok-atom, .tok-literal { color: var(--syn-number); }
  .tok-comment { color: var(--syn-comment); font-style: italic; }
  .tok-typeName, .tok-namespace, .tok-className, .tok-macroName { color: var(--syn-type); }
  .tok-propertyName { color: var(--syn-property); }
  .tok-meta { color: var(--syn-meta); }
  .tok-operator, .tok-punctuation, .tok-bracket, .tok-separator { color: var(--syn-punct); }
  .tok-link, .tok-url { color: var(--syn-link); }
  .tok-heading { color: var(--syn-heading); font-weight: 600; }

  /* 表格：校样样张「简约灰」——圆角外框、无竖线、灰表头、斑马纹、发丝行线、粘性表头 */
  .table-wrap {
    overflow-x: auto;
    margin: 24px 0;
    border: 1px solid #e4e5e8;
    border-radius: 10px;
  }
  table {
    border-collapse: separate;
    border-spacing: 0;
    width: 100%;
    font-variant-numeric: tabular-nums;
  }
  th, td {
    padding: 12px 16px;
    text-align: left;
    vertical-align: top;
    line-height: 1.65;
  }
  th {
    position: sticky;
    top: 0;
    z-index: 1;
    font-weight: 600;
    font-size: 12.5px;
    letter-spacing: 0.03em;
    color: #5c6068;
    background: color-mix(in srgb, #1a1b1f 4%, #ffffff);
    border-bottom: 1px solid #d2d4d9;
  }
  th:first-child { border-top-left-radius: 9px; }
  th:last-child { border-top-right-radius: 9px; }
  td { border-bottom: 1px solid #e4e5e8; }
  tbody tr:last-child td { border-bottom: 0; }
  tbody tr:last-child td:first-child { border-bottom-left-radius: 9px; }
  tbody tr:last-child td:last-child { border-bottom-right-radius: 9px; }
  tbody tr:nth-child(even) { background: color-mix(in srgb, #1a1b1f 3%, transparent); }
  tbody tr:hover { background: color-mix(in srgb, #4a52a3 6%, transparent); }

  /* 引用：校对样张——3px 校对红边条、无底色、灰字；嵌套收敛为发丝线 */
  blockquote {
    margin: 0 0 24px;
    padding: 12px 16px;
    border-left: 3px solid #4a52a3;
    color: #5c6068;
  }
  blockquote > :last-child { margin-bottom: 0; }
  blockquote > blockquote {
    margin: 8px 0;
    border-left: 1px solid #d2d4d9;
    color: inherit;
  }
  blockquote:has(strong:first-child) { border-left-color: #96590a; }

  /* hr：发丝线 + 中心校对红圆点（校对样张） */
  hr {
    border: none;
    position: relative;
    height: 1px;
    background: #e4e5e8;
    margin: 32px 0;
  }
  hr::after {
    content: "";
    position: absolute;
    left: 50%;
    top: 50%;
    width: 5px;
    height: 5px;
    margin: -2.5px 0 0 -2.5px;
    border-radius: 50%;
    background: #4a52a3;
  }

  img { max-width: 100%; height: auto; border: 1px solid #e4e5e8; border-radius: 8px; }
  .img-broken {
    display: inline-block;
    max-width: 100%;
    padding: 6px 10px;
    border: 1px dashed #d2d4d9;
    border-radius: 6px;
    color: #5c6068;
    font-size: 0.85em;
    word-break: break-all;
  }

  /* 定义列表 */
  dl { margin: 0 0 16px; }
  dt { font-weight: 600; margin-top: 8px; }
  dd { margin-left: 24px; margin-bottom: 8px; color: #5c6068; }

  /* [TOC] 目录卡片（TizuMark） */
  .toc {
    background: linear-gradient(135deg,
      color-mix(in srgb, #4a52a3 6%, #ffffff) 0%,
      color-mix(in srgb, #4a52a3 3%, #ffffff) 100%);
    border: 1px solid color-mix(in srgb, #4a52a3 22%, #ffffff);
    border-left: 3px solid #4a52a3;
    border-radius: 8px;
    padding: 16px 20px;
    margin: 16px 0;
  }
  .toc-title {
    font-size: 1em;
    font-weight: 600;
    margin-bottom: 12px;
    color: #4a52a3;
    display: flex;
    align-items: center;
    gap: 6px;
  }
  .toc-title svg { flex: none; }
  .toc-list { list-style: none !important; padding-left: 0 !important; margin: 0; }
  .toc-list li { margin-bottom: 3px; line-height: 1.6; }
  .toc-list li::before {
    content: "";
    display: inline-block;
    width: 5px;
    height: 5px;
    border-radius: 50%;
    background: #4a52a3;
    margin-right: 8px;
    vertical-align: middle;
    opacity: 0.6;
  }
  .toc-list li.lvl-2 { padding-left: 20px; }
  .toc-list li.lvl-3 { padding-left: 40px; }
  .toc-list li.lvl-4 { padding-left: 60px; }
  .toc-list a {
    color: #4a52a3;
    text-decoration: underline;
    text-underline-offset: 2px;
    font-size: 0.92em;
  }
  .toc-list a:hover { color: color-mix(in srgb, #4a52a3 82%, #1a1b1f); }

  /* Callout（GitHub 风 > [!NOTE]，TizuMark 复刻；五色走 --alert-*-rgb） */
  .alert {
    border-radius: 10px;
    padding: 14px 18px;
    margin: 16px 0;
    border-left: 4px solid;
    overflow-wrap: break-word;
  }
  .alert-title {
    font-weight: 700;
    margin-bottom: 6px;
    font-size: 0.95em;
    display: flex;
    align-items: center;
    gap: 8px;
    letter-spacing: 0.3px;
  }
  .alert-icon { width: 18px; height: 18px; flex: none; }
  .alert-content { font-size: 0.92em; }
  .alert-content > :first-child { margin-top: 0; }
  .alert-content > :last-child { margin-bottom: 0; }
  .alert-note {
    background: linear-gradient(135deg, rgba(var(--alert-note-rgb, 74, 82, 163), 0.08) 0%, rgba(var(--alert-note-rgb, 74, 82, 163), 0.04) 100%);
    border-left-color: rgb(var(--alert-note-rgb, 74, 82, 163));
    box-shadow: inset 0 0 0 1px rgba(var(--alert-note-rgb, 74, 82, 163), 0.1);
  }
  .alert-note .alert-title { color: rgb(var(--alert-note-rgb, 74, 82, 163)); }
  .alert-tip {
    background: linear-gradient(135deg, rgba(var(--alert-tip-rgb, 23, 122, 61), 0.08) 0%, rgba(var(--alert-tip-rgb, 23, 122, 61), 0.04) 100%);
    border-left-color: rgb(var(--alert-tip-rgb, 23, 122, 61));
    box-shadow: inset 0 0 0 1px rgba(var(--alert-tip-rgb, 23, 122, 61), 0.1);
  }
  .alert-tip .alert-title { color: rgb(var(--alert-tip-rgb, 23, 122, 61)); }
  .alert-important {
    background: linear-gradient(135deg, rgba(var(--alert-important-rgb, 124, 58, 237), 0.08) 0%, rgba(var(--alert-important-rgb, 124, 58, 237), 0.04) 100%);
    border-left-color: rgb(var(--alert-important-rgb, 124, 58, 237));
    box-shadow: inset 0 0 0 1px rgba(var(--alert-important-rgb, 124, 58, 237), 0.1);
  }
  .alert-important .alert-title { color: rgb(var(--alert-important-rgb, 124, 58, 237)); }
  .alert-warning {
    background: linear-gradient(135deg, rgba(var(--alert-warning-rgb, 150, 89, 10), 0.08) 0%, rgba(var(--alert-warning-rgb, 150, 89, 10), 0.04) 100%);
    border-left-color: rgb(var(--alert-warning-rgb, 150, 89, 10));
    box-shadow: inset 0 0 0 1px rgba(var(--alert-warning-rgb, 150, 89, 10), 0.1);
  }
  .alert-warning .alert-title { color: rgb(var(--alert-warning-rgb, 150, 89, 10)); }
  .alert-caution {
    background: linear-gradient(135deg, rgba(var(--alert-caution-rgb, 192, 57, 44), 0.08) 0%, rgba(var(--alert-caution-rgb, 192, 57, 44), 0.04) 100%);
    border-left-color: rgb(var(--alert-caution-rgb, 192, 57, 44));
    box-shadow: inset 0 0 0 1px rgba(var(--alert-caution-rgb, 192, 57, 44), 0.1);
  }
  .alert-caution .alert-title { color: rgb(var(--alert-caution-rgb, 192, 57, 44)); }

  /* 数学公式（KaTeX 1.1em，TizuMark） */
  .math-block { margin: 16px 0; overflow-x: auto; overflow-y: hidden; }
  .math-block .katex-display { margin: 0; }
  .katex { font-size: 1.1em; }
  .katex-error { color: #5c6068; font-style: italic; }
  .math-error {
    color: #5c6068;
    background: color-mix(in srgb, #1a1b1f 6%, #ffffff);
    border: 1px dashed #d2d4d9;
    border-radius: 4px;
    padding: 0 0.35em;
    font-family: monospace;
    font-size: 0.88em;
  }

  /* 脚注 */
  .footnote-ref { line-height: 0; }
  .footnote-ref a, .footnote-backref {
    color: #4a52a3;
    font-weight: 600;
    text-decoration: none;
  }
  .footnote-ref a:hover { text-decoration: underline; }
  .footnotes-sep { margin: 32px 0 16px; border: none; border-top: 1px solid #e4e5e8; }
  .footnotes { font-size: 0.92em; color: #5c6068; }
  .footnotes-list { padding-left: 1.6em; margin: 0; }
  .footnote-item { margin: 0.25em 0; }
  .footnote-item p { margin: 0 0 4px; }
  .footnote-backref { margin-left: 4px; font-size: 0.85em; opacity: 0.6; }
  .footnote-backref:hover { opacity: 1; }

  ins { text-decoration: underline; }
  sub, sup { font-size: 0.72em; line-height: 0; }
  /* 选中态：随系统颜色，但保证不破坏布局 */
  ::selection { background: color-mix(in srgb, #4a52a3 30%, transparent); }
</style>
</head>
<body>
<article><h1 data-line="0" id="title">Title</h1>
<p data-line="2">para <strong>bold</strong> <code>code</code></p>
<ul class="contains-task-list" data-line="4">
<li class="task-list-item enabled" data-line="4"><input class="task-list-item-checkbox" type="checkbox"> todo</li>
</ul>
<div class="table-wrap"><table data-line="6">
<thead data-line="6">
<tr data-line="6">
<th>a</th>
</tr>
</thead>
<tbody data-line="8">
<tr data-line="8">
<td>1</td>
</tr>
</tbody>
</table>
</div></article>
</body>
</html>"
`;
